--- a/.gitignore
+++ b/.gitignore
@@ -18,6 +18,7 @@ erl_crash.dump
 
 # Ignore package tarball (built via "mix hex.build").
 qx-*.tar
+qx_sim-*.tar
 
 # Temporary files, for example, from tests.
 /tmp/
